src/test/deca/context/invalid/pierre/objects/extendsBefore.deca
class B extends A {
    int nok;
}
class A {}
{}